# algoritmit_ja_tekoaly_harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md  viikkoraportti7ja8.md
src/: config.py  file_io.py  huffman_coder.py  index.py  performance_test.py
src/entities/: huffmantree_node.py
src/services/: text_compressor_service.py
src/tests/: file_io_test.py  huffman_coder_test.py  lzw_coder_test.py  text_compressor_service_test.py
src/tests/integration_tests/: text_compressor_service_integration_test.py
src/tests/text_files/: loremipsum445_3rows_ISO8859-1.txt  testingthistest28_ISO8859-1.txt
src/tests/unit_tests/: file_io_test.py  huffman_coder_test.py  lzw_coder_test.py  text_compressor_service_test.py
src/ui/: cli.py  gui.py
src/utils/: file_io.py  huffman_coder.py  lzw_coder.py
