[tool.poetry]
name = "textcompressor"
version = "0.1.0"
description = ""
authors = ["Ilkka Kivistö <ilkka.kivisto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
invoke = "^2.2.0"
bitstring = "^4.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"
pylint = "^2.17.5"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
